--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,25 @@
         <maven.compiler.target>17</maven.compiler.target>
         <kotlin.code.style>official</kotlin.code.style>
     </properties>
-    <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.20</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
     <dependency>
         <groupId>com.squareup.okhttp3</groupId>
         <artifactId>okhttp</artifactId>
         <version>4.10.0</version>
     </dependency>
     </dependencies>
+
+
 
 
 
