--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         <artifactId>okhttp</artifactId>
         <version>4.10.0</version>
     </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
 
